--- a/docker/Makefile
+++ b/docker/Makefile
@@ -2,13 +2,10 @@ name                 = ecole_42
 docker-compose       = sudo docker-compose
 
 all:
-	@$(docker-compose) stop
-	@$(docker-compose) build
-	@$(docker-compose) up --detach
+	@$(docker-compose) up --build --detach
 	@$(docker-compose) exec $(name) bash -c "clear && bash"
 
 fclean:
-	@$(docker-compose) stop
 	@$(docker-compose) down --remove-orphans --volumes
 
 re: fclean all
