--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     hostname: 42 São Paulo
     build: 
       context: .
-      dockerfile: Dockerfile
     volumes:
       - ../volume:/volume
+      - /tmp/.X11-unix:/tmp/.X11-unix
+    environment:
+      - DISPLAY=host.docker.internal:0
